# Niffler

./: .gitignore  CLAUDE.md  Dockerfile  README.md  ROBOTDREAMS.MD  docker-compose.yml  optimization_results.json  pyproject.toml  test_exporters_demo.py  todo
config/: logging.py
config/grafana/: README.md
docs/: analysis.md  backtesting.md  data-management.md  installation.md  optimization.md  risk-management.md
niffler/analysis/: __init__.py  analysis_result.py  monte_carlo_analyzer.py  walk_forward_analyzer.py
niffler/backtesting/: __init__.py  backtest_engine.py  backtest_result.py  trade.py
niffler/data/: __init__.py
niffler/exporters/: __init__.py  base_exporter.py  console_exporter.py  csv_exporter.py  elasticsearch_exporter.py  exporter_manager.py
niffler/optimization/: __init__.py  base_optimizer.py  grid_search_optimizer.py  optimization_result.py  optimizer_factory.py  parameter_space.py  random_search_optimizer.py
niffler/risk/: __init__.py  base_risk_manager.py  fixed_risk_manager.py  kelly_risk_manager.py
niffler/strategies/: __init__.py  base_strategy.py  simple_ma_strategy.py
scripts/: analyze.py  backtest.py  download_data.py  optimize.py  preprocessor.py
tests/: test_download_data.py  test_preprocessor.py
tests/test_analysis/: test_monte_carlo_analyzer.py  test_walk_forward_analyzer.py
tests/test_backtesting/: test_backtest_engine.py
tests/test_downloaders/: __init__.py  test_ccxt_downloader.py  test_yahoo_finance_downloader.py
tests/test_risk/: __init__.py  (+3 more)
visualization/: README.md  clean_elasticsearch.py  setup_kibana.py
(+47 files in other folders)
